# de_kafka_stream

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  prometheus.yaml  pyproject.toml  risingwave.toml  tasks.txt
.github/: pull_request_template.md
app/: consumer.py  main.py  producer.py  rising_wave.py
app/kafka/: kafka_client.py
app/utils/: logger.py
